<resources>
    <string name="app_name">Dhaka Transport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BD Transport</string>
    <string name="nav_header_subtitle">diu@edu.bd.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Manual Calculator</string>
    <string name="menu_slideshow">Fare Information</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Achim">
        Gabtoli - Technical - Ansar Camp - Mirpur 1 - Sony Hall
        - Mirpur 2 - Mirpur 10 - Mirpur 12 - Kalshi - Ecb Chattar
        - MES - Shewra - Kuril - Basundhara - Nadda - Natun Bazar
        - Bashtola - Shahjadpur - Uttar Badda - Badda - Maddha Badda
        - Merul - Rampura Bridge - Banasree - Demra Staff Quater
    </string>
    <string name="Agradut">
        Savar - Hemayetpur - Gabtoli - Technical - Kallyanpur
        - Shyamoli - Shishu Mela - Agargaon - Zia Udyan - Bijoy Sarani
        - Jahangir Gate - Mohakhali - Wireless - Gulshan 1 - Badda -
        Shahjadpur - Bashtola - Natun Bazar
    </string>
    <string name="Airport">
        Fulbaria - Golap Shah Mazer - GPO - Paltan - Press Club -
        High Court - Motsho Bhaban - Shahbag - Bangla Motor -
        Karwan Bazar - Farmaget - Jahangir Gate - Mohakhali -
        Chairman Bari - Shainik Club - Banani - Kakoli - Staff Road -
        MES - Shewra - Kuril - Khilkhet - Airport - Jasimuddin - Rajlakhsmi -
        Azampur - House Building - Abdullahpur
    </string>
    <string name="Akash">
        Kodomtoli - Keraniganj - Babu Bazar - Naya Bazar - Golap Shah Mazar -
        GPO - Paltan - Kakrail - Shantinagar - Malibagh Railgate - Rampura -
        Merul - Maddha Badda - Badda - Uttar Badda Bazar - Shahbajpur - Bashtola -
        Natun Bazar - Nadda - Basundhara - Kuril Bishwa Road - Khilkhet - Airport -
        Jasimuddin - Rajlakshmi - Azampur - House Building - Diabari
    </string>
    <string name="Akik">
        Ansar Camp - Mirpur 1 - Sony Hall
        - Mirpur 2 - Mirpur 10 - Mirpur 12 - Kalshi - Ecb Chattar
        - MES - Shewra - Kuril - Basundhara - Nadda - Natun Bazar
        - Bashtola - Shahjadpur - Uttar Badda
    </string>
    <string name="AlMadina">
        Nandanpark - Zirani Bazar - Bipayl - Nobonnagar - Savar
        - Hemayetpur - Aminbazar - Gabtoli - Technical - Kallyanpur - Shymoli
        - Shishu Mela - College Gate - Asad Gate - Khamarbari - Farmgate - Karwan Bazar -
        Bangla Motor - Shahbag - HHigh Court - Press Club - Paltan - GPO - Gulistan - Motijheel
        - Kamalpur
    </string>
    <string name="AlMakka">
        Motijheel - Gulistan - GPO - Paltan - Kakrail -
        Malibagh - Mouchak - Moghbazar - Nabisco - Mohakhali -
        Chirman Bari - Banani - Kakoli - ECB Chattar - Kalshi -
        Purobi - Mirpur 10 - Mirpur 2 - Mirpur 1
    </string>
    <string name="Alif">
        Mirpur 14 - Mirpur 13 - Mirpur 10 - Mirpur 2 - Mirpur 1 -
         Mazar Road - Diabari - Nobaberbag - Tamanna Water Family -
        Estern Housing - Birulia - Panchaboti - Dhour Beribadh - Ashulia -
        Zirabo - Nishchintapur - Fantasy Kingdom - Jamgora - Bogabari -
        Baipyl - EPZ
    </string>
    <string name="Alike">
        Balughat - Signal - CMH - Garison -
        Adamjee College - Workshop - Jahangir Gate -
        Farmgate - Bangla MOtor - Shahbag
    </string>
    <string name="Anabil">
        Sign Board - Shonir Akhra - Jatrabari -
        Sayedabad - Mugdapara - Basabo - Khilgaon -
        Malibag - Rampura - Merul - Badda - Natun Bazar -
        Nadda - Kuril - Khilkhet - Airport - House Building -
        Abdullahpur - Tongi - Gazipur
    </string>
    <string name="Ashian">
        Gulistan - Kazia - Matuial - Konapara -
        Demra Staff Quarter - Tarabo - Konapara -
        Borabo - Rupshi - Borpa - Bhulta
    </string>
    <string name="Ashirbad">
        Duaripara - Rupnagar - Shiyal Bari - Proshikha More
        - Mirpur 2 - Mirpur 1 - Ansar Camp - Technical - Kallyanpur
        - Shyamoli - Shishu Mela - College Gate - Asad Gate - Dhanmondi 27
        - Dhanmondi 32 - Kalabagan - City College - New Market -Nilkhet - Azimpur
    </string>
    <string name="Ashulia">
        Nobinanagar - Baipayl - Jamgora - Fantasy kingdom -
        Zirabo - Ashulia Bazar - Kamarpara - Abdullahpur -
        House Building - Airport - Kuril - Shewra - MES - Kakoli -
        Banani - Chairman Bari - Mohakhali - Nabisco - Satrasta
    </string>
    <string name="Asmani">
        Dhour - Adbullahpur - House Building - Azampur -
        Rajlakhsmi - Jasimuddin - Airport - Khilkhet -
        Kuril - Jamuna Future Park - Basundhara - Nadda - Natun Bazar
        - Bashtola - Shahjadpur - Uttar Badda - Badda - Maddha Badda
        - Merul - Rampura Bridge - Banasree - Demra Staff Quater - Tarabo -
        Madanpur
    </string>
    <string name="Ayat">
        Chiriyakhana - Sony Cinema Hall - Mirpur 2 - Mirpur 10 -
        Kazipara - Shewrapara - Taltola - Agargaon - Khamar Bari -
        Farmgate - Karwan Bazar - Bangla Motor - Mogbazar - Mouchak -
        MAlibag - Rajarbag - Kamalapur
    </string>
    <string name="BRTC">

Gabtoli - Mirpur1 - Mirpur10 - Kazipara - Shewrapara
- Mohakhali -b kakoli - Banani - Gulshan 2 - Natun Bazar - badda  - Rampura

</string>
    <string name="Bolaka">

Motijhil - Komalapur - Malibag - Moghbazar - Nabisko - Mohakhali - Banani
- Khilkhet - Airport - Uttara - Tongi - Board Bazar - Gazipur Shib Bari

</string>
    <string name="BasumatiTransport">

Gabtoli - Mirpur 1 - Mirpur 10 -Kalshi - Bisshoroad - Airport - Uttara
- Abdullahpur - Tongi - Gazipur

</string>
    <string name="BestShatabdi">

Azimpur - Nilkhet - New Market - City Colgge - Kalabagan - Dhanmondi 32 - Dhanmondi 27
- Khamar Bari - Farmgate -jahangir gate - Mohakhali
- Chairman Bari - sainik Club - banani - Kakali - Staff Road - MES -Shewra - kuril - khilkhet
- Airport - jashimuddin - Rajlaksmi - Azampur - house building - Diabari

</string>
    <string name="BestTransport">

Mirpur 10 - Mirpur 14 - kazipara - Sheorapara - Agargaon
- Farmgate - Shahbagh - Motijhil - Saydabad - jatrabari

</string>
    <string name="BhuiyanParibahan">

japan garden City - Ring Road - Adabor - Shymoli - Shishu mela
- Agargaon - Zia Uddyan - Bijoy Soroni - Old airport - Jahangir gate
- Mohakhali - Chairman bari - Sainink road - kakali - Banani- Staff Road
- MES - Shewra - Kuril - Khilkhet - Airport - Jashimuddin - Rajlakshmi
- Azampur - house Building - Abdullahpur

</string>
    <string name="Bihanga">

Mirpur 12 - Mirpur 11 - mirpur 10 - Kazipara - Shewrapara
- Mohakhali - Gulshan 1 - badda - Natun bazar

</string>
    <string name="Bikalpa">

Mirpur 12 - Mirpur 10 - Agargaon - farmgate - Shahbag - Motijhil

</string>
    <string name="Bikash">

Azimpur - Nilkhet - New Market - City Colgge - Kalabagan - Dhanmondi 28
- Khamar Bari - Farmgate - jahangir gate - Mohakhali - sainik Club - banani
- kakali - kuril - bishow Road - khilkhet - Airport - Abdullahpur Kamarpur

</string>
    <string name="CBS">
        Mirpur 14 - Mirpur 10 - Mirpur 2 - Sony Chinema Hall
        - Mirpur 1 - Ansar Camp - Technical - Gabtoli - Amin Bazar - Hemayetpur- Savar
    </string>
    <string name="CMS">
        Mirpur 14 - Kachukhet - Sainik Club - Kakali - Banani - Mohakhali
    </string>
    <string name="Champion">
        Vashantek - Mirpur 14 - Mirpur 10 - Mirpur 2 - Sony Chinema Hall
        - Mirpur 1 - Ansar Camp - Technical - Gabtoli
    </string>
    <string name="CityLink">
        Chittagong Road - Sign Road - Matuail - Rayerbag
        - Shonir Akhra - Jatrabari - Sayedabad - Gulistan -
        GPO - Paltan - Press Club - High Court - Matsya Bhaban -
        Shahbag - Bata Signal - Science Lab - City College -
        Jigatola - Dhanmondi 15 - Star Kabab - Shankar -
        Mohammadpur - Basila - Ghatar Char
    </string>
    <string name="DLink">

Fulbaria - Chankharpul - Boksi Bazar - Azimpur - Nilkhet - New Market - City College - Kalabagan -
 Dhanmondi 32 - Dhanmondi 27 - Asad gate - College gate - Shishu Mela - Shyamoli - kallaynapur - Darusalam -
 Technical - Gabtoli - Amin Bazar - Nibunagar - Hemayatpur Savar - Dhamrai

</string>
    <string name="Deepan">

Tajmahal Road - Shankar - Dhanmondi 15 - Jigatoola - City College - Sceince lab - bata signal - katabon - Shahbag - Matsya Bhaban - Paltan

</string>
    <string name="DeshBangla">

Postogola - Dholaipar - jatrabari - Saydabad - Mughdapara - Bashabo - Khilgaon - Malibagh - Rampura Bazar - Rampura Bridge
- Merul badda - Uttor Badda - Bashtola - Notun bazar - Nadda - Bashundhara - Jamuna Future park - Kuril - Khilkhet
- Airport - Jashimuddin - Rajlakshmi - Azampur - House Building - Abdullahpur - Kamarpara

</string>
    <string name="DhakaChaka1">

Police plaza - Gulshan 1 - Notun Bazar

</string>
    <string name="DhakaChaka2">

Banani - Gulshan - Notun Bazar

</string>
    <string name="DhakaMetroService">

Mirpur 1 - kallayanpur - Shyamoli - Asad gate - Sukrabad - kalabagan - Science lab - New market - Nilkhet - Azimpur

</string>
    <string name="Dipon">

Tajmahal Road - Salimullah Road - Jakir Hossen Road - Shankar - Star kabab - Dhanmondi 15 - Jigatola - City College
- Science Lab - Bata Signal - Shahbag - Matsaya Bhaban - High Court - Press Club - Paltan - baitul Mukaram - Gulistan - Motijhil - Arambagh

</string>
    <string name="Dishari">

Chiriyanka - Mirpur 1 - Ansar Camp - Technical - kallyanpur - Shyamoli - Shishu Mela - College gate - Asad gate - Khamar Bari - farmgate
- Kawran Bazar - Bangla Motor - Shahbagh - Matsya bhaban - High Court - Press Club - Paltan - GPO - Golap Shah Mazar - Naya Bazar - Babubazar - Keraniganj


</string>
    <string name="Elite">
        Agargaon - Taltola - Shewrapara - Kazipara
        - Mirpur 10 - Mirpur 11 - Purobi - Pallabi
        - Kalshi - Kuril - Airport - Jasimuddin -
        Rajlakshmi - Abdullahpur
    </string>
    <string name="ETCTransport">
        Golap Shah Mazar - GPO - Paltan - Press Club - High Court -
        Matsya Vaban - Shahbag - Bangla Motor - Karwan Bazar - Farmgate -
        Khamar Bari - Agargaon - Taltola - Shewrapara - Kazipara - Mirpur 10 -
        Mirpur 11 - Purobi - Pallabi - Mirpur 12
    </string>
    <string name="EverestParibahan">
        Rupnagar - Mirpur 2 - Mirpur 1 - Khamar Bari - Farmagte -
        Gulistan - Keraniganj
    </string>
    <string name="FirstTen">

Vashantek - Mirpur 14 - Mirpur 10 - Mirpur 2 - Sony Cinema Hall - Mirpur 1 - Ansar camp - Technical - Gabtoli

</string>
    <string name="FTCL1">

Mohammadpur - Shankar - Star kabab - Dhanmondi 15 - Jigatola - City Colege - Science lab - bata Signal - Katabon
- Shahbagh - matsya bhaban - paltan - GPO - gulistan - Sayedabad - Janapath Moor - jatrabari - Shonir Akhra - rayerbagh - matuail - Sign board - Chittagong Road

</string>
    <string name="FTCL2">

Mohammadpur - Shankar - Star kabab - Dhanmondi 15 - Jigatola - City Colege - Science lab - bata Signal - Katabon
- Shahbagh - matsya bhaban - paltan - Gulistan - Motijhil - Arambagh

</string>
    <string name="features1">
        (1)Type TR(space)train no/code send to 16318
    </string>
    <string name="features2">
        (2)Train Number can be found in Train Ticket
    </string>
    <string name="features3">
        (3)Charge BDT 4*VAT SD and sc applicable
    </string>
    <string name="features4">
        (1)Travellers can get current location of a train in real time within 5 second.
    </string>
</resources>