<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bdtrunsport.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_aboutUs"
        android:name="com.example.bdtrunsport.ui.aboutUs.aboutUs"
        android:label="About Us"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/nav_termsCons"
        android:name="com.example.bdtrunsport.ui.termsCons.termsCons"
        android:label="Terms and Condition"
        tools:layout="@layout/fragment_terms_cons" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.bdtrunsport.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.bdtrunsport.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>